# Hypr

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/ISSUE_TEMPLATE/: feature_request.md  report-a-bug.md
.github/workflows/: c-cpp.yml  codeql-analysis.yml
example/: hypr.conf  hypr.desktop
src/: KeybindManager.cpp  KeybindManager.hpp  defines.hpp  main.cpp  window.cpp  window.hpp  windowManager.cpp  windowManager.hpp
src/bar/: Bar.cpp  Bar.hpp  BarCommands.cpp  BarCommands.hpp
src/config/: ConfigManager.cpp  ConfigManager.hpp  defaultConfig.hpp
src/events/: events.cpp  events.hpp
src/ewmh/: ewmh.cpp  ewmh.hpp
src/helpers/: Vector.cpp  Vector.hpp
src/ipc/: ipc.cpp  ipc.hpp
src/utilities/: AnimationUtil.cpp  AnimationUtil.hpp  Debug.cpp  Debug.hpp  Keybind.cpp  Keybind.hpp  Monitor.hpp  Tray.hpp  Util.cpp  Util.hpp  Workspace.cpp  Workspace.hpp  XCBProps.cpp  XCBProps.hpp
